<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".AddActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/translate_titulo"
            android:inputType="textPersonName"
            android:text=""

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/author_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/author_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/translate_descricao"
            android:inputType="text"
            android:text=""

            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prices_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/prices_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/translate_preco_total"
            android:inputType="numberDecimal"
            android:ems="10"
            />
    </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"

            >
            <RadioButton
                android:id="@+id/checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/translate_nao_repetir" /> <!-- Define este como selecionado por padrão -->

            <RadioButton
                android:id="@+id/checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/translate_repetir"
                />

        </RadioGroup>


    <!-- Caixa de Texto para "Parcelar" -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/parcelar_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:visibility="gone"> <!-- Inicialmente, ocultamos esta opção -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/parcelar_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/translate_numero_de_parcelas"
            android:inputType="number"
            android:ems="10" />
    </com.google.android.material.textfield.TextInputLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"

        />

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/translate_adicionar"
        android:textAllCaps="false" />
</LinearLayout>
</ScrollView>
